--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,15 @@
 plugins {
     id 'org.springframework.boot' version '2.1.5.RELEASE'
     id "io.spring.dependency-management" version "1.0.7.RELEASE"
-    id "io.freefair.lombok" version "3.6.4"
+    id "io.freefair.lombok" version '3.6.4'
     id 'java'
     id 'idea'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.31'
+
 }
 repositories {
     mavenCentral()
+    maven { url "https://dl.bintray.com/spekframework/spek" }
 }
 bootJar {
     archiveFileName = 'exoplanet-summary-api'
@@ -32,10 +35,25 @@ dependencies {
     implementation("net.rakugakibox.spring.boot:logback-access-spring-boot-starter:2.7.1")
 //    testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation("org.junit.jupiter:junit-jupiter:5.4.2")
+    testImplementation "org.spekframework.spek2:spek-dsl-jvm:2.0.5"
+    testRuntimeOnly "org.spekframework.spek2:spek-runner-junit5:2.0.5"
+    implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
 }
 test {
-    useJUnitPlatform()
+    useJUnitPlatform {
+        includeEngines 'spek2'
+    }
     testLogging {
         events 'PASSED', 'FAILED', 'SKIPPED'
+    }
+}
+compileKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+}
+compileTestKotlin {
+    kotlinOptions {
+        jvmTarget = "1.8"
     }
 }
