--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ plugins {
     id 'java'
     id 'idea'
     id 'org.jetbrains.kotlin.jvm' version '1.3.31'
-
+    id "org.jetbrains.kotlin.plugin.spring" version "1.3.31"
 }
 repositories {
     mavenCentral()
@@ -33,15 +33,19 @@ dependencies {
     implementation("org.glassfish.jaxb:jaxb-runtime:2.3.1")
     implementation("net.logstash.logback:logstash-logback-encoder:6.0")
     implementation("net.rakugakibox.spring.boot:logback-access-spring-boot-starter:2.7.1")
-//    testImplementation('org.springframework.boot:spring-boot-starter-test')
+    testImplementation("org.springframework.boot:spring-boot-starter-test") {
+        exclude module: "junit"
+        exclude module: "mockito-core"
+    }
     testImplementation("org.junit.jupiter:junit-jupiter:5.4.2")
     testImplementation "org.spekframework.spek2:spek-dsl-jvm:2.0.5"
     testRuntimeOnly "org.spekframework.spek2:spek-runner-junit5:2.0.5"
     implementation("org.jetbrains.kotlin:kotlin-stdlib-jdk8")
+    testImplementation("com.ninja-squad:springmockk:1.1.2")
 }
 test {
     useJUnitPlatform {
-        includeEngines 'spek2'
+        includeEngines 'spek2','junit-jupiter'
     }
     testLogging {
         events 'PASSED', 'FAILED', 'SKIPPED'
